--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ a.navbar-brand {
 
 .bg-img {
    background-image: url(../ImagensSite/bg.jpg);
-   height: 800px;
+   height: 600px;
     background-size: 100% 100%;
 	background-repeat: no-repeat;
 }
@@ -243,4 +243,24 @@ footer a:hover {
    .layer h1 {
       font-size: 34px;
    }
+}
+
+
+
+.botao{
+	font-size: 20px;
+	text-decoration: none;
+	background: #A52A2A;
+	font-family: Arial, Helvetica, sans-serif;
+	padding: 10px;
+	border-radius: 10px;
+	color: white;
+}
+
+
+.botao:hover{
+	font-size: 20px;
+	text-decoration: none;
+	background: red;
+	color: white;
 }
