--- a/css/edu.css
+++ b/css/edu.css
@@ -6,7 +6,7 @@ body{
 	margin: 0px;
 	justify-content: center;
 	align-items: center;
-	color: white; 
+	color: black; 
 	
 	
 	background: url('../ImagensSite/bg_.jpg') center center no-repeat fixed; 
@@ -117,8 +117,8 @@ background-repeat: no-repeat;
 .fundo{ 
 display: flex;
 	flex-flow: row wrap;
-	 background: black; 
-	height: 100%; 
+	 //background: black; 
+	height: auto; 
 	margin-top: 0px 0px;
 	 width:100%;
  }
@@ -127,7 +127,7 @@ display: flex;
 display: flex;
 	flex-flow: row wrap;
 	 background: rgb(16, 19, 19); 
-	 background: rgba(50,50,50,0.3); 
+	 background: rgba(0,0,0,0.5); 
 	 
 	padding: 2%; 
 	opacity: 90%;
