--- a/css/style2.css
+++ b/css/style2.css
@@ -19,11 +19,22 @@ body {
 input[type=submit] {
   border-radius: 5px;
   border: 1px solid #333;
-  background-color: red;
+  background-color: rgb(143 12 12);
   color: #fff;
   height: 50px;
-  width: 100px;
+  width: 100px; 
+  transition: transform .3s;
+  font-family:Impact;
+font-size: 20px;  
 }
+
+input:hover{
+	 background-color: red;
+transform: scale(1.1);
+font-family:Impact;	 
+}
+
+
 input[type=text] {
     font-size: 20px;
 } 
